[package]
name = "osistack"
version = "0.0.1"
edition = "2021"
authors = ["Ernst Rohlicek <ernst@rohlicek.at>"]
repository = "https://github.com/ERnsTL/osi-stack"
license = "GNU/LGPL-3.0+"
description = "OSI (Open Systems Interconnection) Stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO anyone offering Windows TAP? And MacOS TAP (feth)?
tun-tap = { version = "0.1.4", default-features = false }  # no tokio   # features = ["libc"] would add set_nonblocking() feature
#tunio = "0.3.0"

netconfig = "0.4.0" # TODO this does a lot of things we dont need (IP-related stuff)

# Ethernet frame parser
#ethernet = "0.1.1" # most minimal, but didnt compile
# alternative (many IP suite protocols):  https://crates.io/crates/etherparse
etherparse = "0.13.0"
advmac = "1.0.3"    # used by pdu+netconfig
# alternative (fuzzed, datalink+network+transport layer development possible, Linux Windows MacOS):  https://crates.io/crates/pnet_datalink

# TODO only lib needs the dependencies

[lib]
name = "osistack"
path = "src/lib.rs"

[[bin]]
name = "osiping"
path = "src/bin.rs"
